--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "d3": "^5.14.2",
-    "d3-dsv": "^1.2.0"
+    "d3-dsv": "^1.2.0",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@types/d3": "^5.7.2"
